[package]
name = "htst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.195", features = ["derive"] }
tera = "1.19.1"
toml = "0.8.8"
